data/derived/fa15/progs/unify/prog0226.ml.out
Characters 54-55:
  wwhile (f, 2);;
          ^
Error: This expression has type int -> int * bool
       but an expression was expected of type 'a * bool -> 'a * bool
       Type int is not compatible with type 'a * bool 
